--- a/compare_graph.ipynb
+++ b/compare_graph.ipynb
@@ -61,7 +61,8 @@
     ").numpy()\n",
     "\n",
     "selected_cft_truth_edges = cft_truth_edges[particle_selections]\n",
-    "selected_cft_truth_unsplit_edges = cft_truth_edges[particle_selections & (cft_truth_graph.redundant_split_edges == False).numpy()]\n",
+    "selected_cft_truth_unsplit_edges = cft_truth_edges[\n",
+    "    particle_selections & (cft_truth_graph.redundant_split_edges == False).numpy()]\n",
     "\n",
     "print(\"Number of selected CFT truth nodes:\", len(np.unique(np.concatenate([selected_cft_truth_edges.source.to_numpy(), selected_cft_truth_edges.target.to_numpy()]))))\n",
     "print(\"Number of selected CFT truth edges:\", len(selected_cft_truth_edges))\n",
@@ -97,8 +98,12 @@
     "# print(\"Number of nodes in input file:\", len(module_map_nodes))\n",
     "\n",
     "module_map_edges = nx.to_pandas_edgelist(module_map_graph)\n",
-    "module_map_edges = module_map_edges.merge(module_map_nodes, left_on='source', right_on='node', how='left').drop(['source', 'node'], axis=1).rename(columns={'hit_id': 'source'})\n",
-    "module_map_edges = module_map_edges.merge(module_map_nodes, left_on='target', right_on='node', how='left').drop(['target', 'node'], axis=1).rename(columns={'hit_id': 'target'})\n",
+    "module_map_edges = module_map_edges.merge(\n",
+    "    module_map_nodes, left_on='source', right_on='node', how='left').drop(\n",
+    "        ['source', 'node'], axis=1).rename(columns={'hit_id': 'source'})\n",
+    "module_map_edges = module_map_edges.merge(\n",
+    "    module_map_nodes, left_on='target', right_on='node', how='left').drop(\n",
+    "        ['target', 'node'], axis=1).rename(columns={'hit_id': 'target'})\n",
     "# print(module_map_edges)\n",
     "print(\"Number of module map nodes:\", len(np.unique(np.concatenate([module_map_edges.source.to_numpy(), module_map_edges.target.to_numpy()]))))\n",
     "print(\"Number of module map edges:\", len(module_map_edges))"
@@ -327,8 +332,10 @@
     "\n",
     "merged_truth_edges = pd.concat([merged_truth_edges, reversed_merged_truth_edges])\n",
     "\n",
-    "unmatched_module_map_truth_edges = module_map_truth_edges.merge(merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
-    "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
+    "unmatched_module_map_truth_edges = module_map_truth_edges.merge(\n",
+    "    merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
+    "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[\n",
+    "    unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
     "print(\"Number of unmatched module map true non-split edges:\", len(unmatched_module_map_truth_edges))\n",
     "unmatched_module_map_truth_edges"
    ]
@@ -414,8 +421,10 @@
     "\n",
     "merged_truth_edges = pd.concat([merged_truth_edges, reversed_merged_truth_edges])\n",
     "\n",
-    "unmatched_module_map_truth_edges = module_map_truth_edges.merge(merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
-    "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
+    "unmatched_module_map_truth_edges = module_map_truth_edges.merge(\n",
+    "    merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
+    "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[\n",
+    "    unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
     "print(\"Number of unmatched module map true edges:\", len(unmatched_module_map_truth_edges))\n",
     "unmatched_module_map_truth_edges"
    ]
