--- a/compare_graph.ipynb
+++ b/compare_graph.ipynb
@@ -99,11 +99,17 @@
     "\n",
     "module_map_edges = nx.to_pandas_edgelist(module_map_graph)\n",
     "module_map_edges = module_map_edges.merge(\n",
-    "    module_map_nodes, left_on='source', right_on='node', how='left').drop(\n",
-    "        ['source', 'node'], axis=1).rename(columns={'hit_id': 'source'})\n",
+    "    module_map_nodes,\n",
+    "    left_on='source',\n",
+    "    right_on='node',\n",
+    "    how='left'\n",
+    ").drop(['source', 'node'], axis=1).rename(columns={'hit_id': 'source'})\n",
     "module_map_edges = module_map_edges.merge(\n",
-    "    module_map_nodes, left_on='target', right_on='node', how='left').drop(\n",
-    "        ['target', 'node'], axis=1).rename(columns={'hit_id': 'target'})\n",
+    "    module_map_nodes,\n",
+    "    left_on='target',\n",
+    "    right_on='node',\n",
+    "    how='left'\n",
+    ").drop(['target', 'node'], axis=1).rename(columns={'hit_id': 'target'})\n",
     "# print(module_map_edges)\n",
     "print(\"Number of module map nodes:\", len(np.unique(np.concatenate([module_map_edges.source.to_numpy(), module_map_edges.target.to_numpy()]))))\n",
     "print(\"Number of module map edges:\", len(module_map_edges))"
@@ -317,7 +323,7 @@
     "    module_map_truth_edges,\n",
     "    on=[\"source\", \"target\"],\n",
     "    how='inner'\n",
-    "    )\n",
+    ")\n",
     "\n",
     "print(\"Number of matched non-split edges:\", len(merged_truth_edges))\n",
     "\n",
@@ -326,14 +332,17 @@
     "    left_on=[\"source\", \"target\"],\n",
     "    right_on=[\"target\", \"source\"],\n",
     "    how='inner'\n",
-    "    ).rename(columns={\"source_x\": \"source\", \"target_x\": \"target\"}).drop([\"source_y\", \"target_y\"], axis=1)\n",
+    ").rename(columns={\"source_x\": \"source\", \"target_x\": \"target\"}).drop([\"source_y\", \"target_y\"], axis=1)\n",
     "\n",
     "print(\"Number of reversed non-splitmatched edges:\", len(reversed_merged_truth_edges))\n",
     "\n",
     "merged_truth_edges = pd.concat([merged_truth_edges, reversed_merged_truth_edges])\n",
     "\n",
     "unmatched_module_map_truth_edges = module_map_truth_edges.merge(\n",
-    "    merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
+    "    merged_truth_edges[[\"id\", \"source\"]],\n",
+    "    on=\"id\",\n",
+    "    how='left'\n",
+    ").rename(columns={\"source_x\": \"source\"})\n",
     "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[\n",
     "    unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
     "print(\"Number of unmatched module map true non-split edges:\", len(unmatched_module_map_truth_edges))\n",
@@ -422,7 +431,10 @@
     "merged_truth_edges = pd.concat([merged_truth_edges, reversed_merged_truth_edges])\n",
     "\n",
     "unmatched_module_map_truth_edges = module_map_truth_edges.merge(\n",
-    "    merged_truth_edges[[\"id\", \"source\"]], on=\"id\", how='left').rename(columns={\"source_x\": \"source\"})\n",
+    "    merged_truth_edges[[\"id\", \"source\"]],\n",
+    "    on=\"id\",\n",
+    "    how='left'\n",
+    ").rename(columns={\"source_x\": \"source\"})\n",
     "unmatched_module_map_truth_edges = unmatched_module_map_truth_edges[\n",
     "    unmatched_module_map_truth_edges[\"source_y\"].isna()].drop([\"source_y\"], axis=1)\n",
     "print(\"Number of unmatched module map true edges:\", len(unmatched_module_map_truth_edges))\n",
